# arachnida

./: .gitignore  .gitmodules
.github/workflows/: build.yml
scorpion/: CMakeLists.txt  Makefile
scorpion/inc/: scorpion.hpp
scorpion/src/: main.cpp  metadata.cpp
spider/: CMakeLists.txt  Makefile
spider/inc/: spider.hpp
spider/src/: downloader.cpp  htmlParser.cpp  main.cpp  parseArguments.cpp  printUsage.cpp  spider.cpp  urlUtils.cpp
